# AMI.rs

./: ARN_ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CONTEXT_AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE_GUIDE.md  MIGRATION_GUIDE_ARN.md  MODEL_MIGRATION_COMPLETE.md  MULTICLOUD_STATUS.md  PHASE2_COMPLETE.md  README.md  SECURITY_AUTHENTICATION_COMPLETE.md  cliff.toml  lcov.info
.githooks/: README.md  pre-commit  prepare-commit-msg
.github/: SETUP.md  VERSIONING.md  dependabot.yml  labeler.yml
.github/workflows/: auto-release.yml  changelog.yml  ci.yml  codecov.yml  doc.yml  docs-manual.yml  labeler.yml  msrv.yml  release.yml  version-and-docs.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARN_ARCHITECTURE_COMPLETE.md  ARN_MIGRATION_GUIDE.md  ARN_MIGRATION_STATUS.md  ARN_SPECIFICATION.md  CHANGELOG.md  CONDITION_KEYS_IMPLEMENTATION.md  CONDITION_KEYS_SUMMARY.md  EXAMPLES.md  GETTING_STARTED.md  IAM_GUIDE.md  INSTANCE_BOOTSTRAP_GUIDE.md  MULTICLOUD_PROVIDERS.md  MULTICLOUD_STATUS.md  MULTI_TENANT_GUIDE.md  PERMISSION_CHECKING.md  README.md  SECURITY.md  SSO_ADMIN_GUIDE.md  STORE_IMPLEMENTATION.md  STS.md
docs/issues/: ISSUE_001_CONDITION_KEYS.md  ISSUE_002_PROVIDER_SYNC.md  README.md
docs/status/: ARN_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE_PHASE_1-3.md  MIGRATION_SUCCESS.md  SECURITY_FIX_AUTHENTICATION_REQUIRED.md
examples/: 01_hello_wami.rs  02_basic_crud_operations.rs  03_service_layer_intro.rs  04_simple_multi_tenant.rs  05_tenant_hierarchy.rs  06_tenant_quotas_and_limits.rs  07_cross_tenant_role_assumption.rs  08_tenant_migration.rs  09_multi_cloud_user_sync.rs  10_provider_switching.rs  11_hybrid_cloud_setup.rs  12_provider_specific_features.rs  13_disaster_recovery_multi_cloud.rs  14_policy_basics.rs  15_policy_evaluation_simulation.rs  16_role_based_access_control.rs  17_attribute_based_access_control.rs  18_session_tokens.rs  19_role_assumption_workflow.rs  20_federated_access.rs  21_sso_setup_basic.rs  22_identity_providers_federation.rs  23_permissions_boundaries.rs  24_policy_attachment.rs  25_arn_usage.rs  26_secure_instance_bootstrap.rs  README.md  arn_architecture_demo.rs  multi_tenant.rs  tenant_authorization.rs  unified_store_demo.rs
src/: context.rs  error.rs  lib.rs  types.rs
src/arn/: builder.rs  mod.rs  parser.rs  transformer.rs  types.rs
src/builders/: mod.rs  user.rs
src/iam/: access_keys.rs  groups.rs  identity_providers.rs  mfa_devices.rs  (+13 more)
tests/: integration_test.rs
(+339 files in other folders)
