[package]
name = "ami"
version = "0.1.0"
authors = ["LSH <github@lsh.tech>"]
edition = "2021"
description = "AWS IAM, STS, and SSO Admin operations library for Rust"
license = "MIT"

[dependencies]
aws-sdk-iam = "1.0"
aws-sdk-sts = "1.0"
aws-sdk-sso-admin = "1.0"
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
