[package]
name = "rustyiam"
version = "0.3.0"
authors = ["LSH <github@lsh.tech>"]
edition = "2021"
rust-version = "1.90.0"
description = "AWS IAM, STS, and SSO Admin operations library for Rust"
license = "MIT"
repository = "https://github.com/Lsh0x/AMI.rs"
homepage = "https://github.com/Lsh0x/AMI.rs"
documentation = "https://docs.rs/rustyiam"
readme = "README.md"
keywords = ["aws", "iam", "sts", "sso", "identity"]
categories = ["api-bindings", "authentication", "development-tools"]

[dependencies]
aws-sdk-iam = "1.0"
aws-sdk-sts = "1.0"
aws-sdk-ssoadmin = "1.0"
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
